--- a/assets/style.css
+++ b/assets/style.css
@@ -6,12 +6,23 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+.logo {
+  color:  rgb(143, 44, 90);
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: 36px;
+}
+
+a {
+  color: rgb(143, 44, 90);
+  text-decoration: none;
+}
+
 .nav-item {
   float: right;
 }
 
 .display-4 {
-  color: aqua;
+  color:  rgb(190, 100, 142);;
 }
 
 nav ul {
@@ -26,17 +37,8 @@ nav ul li {
   margin-left: 25px;
 }
 
-main {
+main p {
   width: 60%;
-}
-
-background_image {
-
-}
-
-a {
-  color: rgb(143, 44, 90);
-  text-decoration: none;
 }
 
 footer {
