--- a/assets/css/contact.style.css
+++ b/assets/css/contact.style.css
@@ -9,7 +9,8 @@
   .logo {
     color:  rgb(143, 44, 90);
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 36px;
+    font-size: 50px;
+    margin-left: 60px;
   }
   
   a {
@@ -28,7 +29,7 @@
   }
   
   .display-4 {
-    color:  rgb(190, 100, 142);;
+    color:  rgb(190, 100, 142);
   }
   
   nav ul {
