--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,7 +9,12 @@ body {
 .logo {
   color:  rgb(143, 44, 90);
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  font-size: 36px;
+  font-size: 50px;
+  margin-left: 60px;
+}
+
+.col-md-6 {
+  top: center;
 }
 
 a {
@@ -22,7 +27,7 @@ a {
 }
 
 .display-4 {
-  color:  rgb(190, 100, 142);;
+  color:  rgb(190, 100, 142);
 }
 
 nav ul {
