--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,8 @@
 
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  margin-left: 20px;
+  margin-right: 20px;
 }
 
 .logo {
@@ -13,10 +15,11 @@ body {
   margin-left: 60px;
 }
 
-
-.col-sm-6 .profile {
-  width: 500px;
-  height: auto;
+.col-sm-6 .center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 70%;
 }
 
 a {
