--- a/assets/css/projects.style.css
+++ b/assets/css/projects.style.css
@@ -19,6 +19,19 @@
     color: rgb(143, 44, 90);
     text-decoration: none;
   }
+
+  h1 {
+    color: rgb(143, 44, 90);
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: lighter;
+    font-size: 25px;
+    text-align: center;
+    padding: 10px;
+  }
+
+  .row {
+    padding-bottom: 20px;
+  }
   
   .nav-item {
     float: right;
