--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,8 +4,6 @@
 
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  margin-left: 20px;
-  margin-right: 20px;
 }
 
 .logo {
@@ -22,9 +20,28 @@ body {
   width: 70%;
 }
 
+.card h1 {
+  color: rgb(143, 44, 90);
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-weight: lighter;
+  font-size: 25px;
+  text-align: center;
+  padding: 10px;
+}
+
+.row{
+  padding-bottom: 20px;
+}
+
 a {
   color: rgb(143, 44, 90);
   text-decoration: none;
+}
+
+.linkedin {
+  padding-top: 20px;
+  width: 100px;
+  height: 100px;
 }
 
 .nav-item {
