--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,6 +70,23 @@ section {
     margin-left: 10px;
 }
 
+#sendButton {
+    background-color:  rgb(190, 100, 142);
+    border: none;
+    box-shadow: none;
+}
+
+label {
+    color: rgb(190, 100, 142);
+    font-family: BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 20px;
+    margin-bottom: 0rem;
+}
+
+button:hover {
+    opacity: 0.7;
+}
+
 #linkedin {
     margin: 10px;
 }
