--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,7 @@ a {
 a:hover {
     text-decoration: none;
     color: rgb(143, 44, 90);
-    opacity: 0.5;
+    opacity: 0.7;
 }
 
 .logo {
@@ -99,22 +99,31 @@ button:hover {
     margin: 10px;
 }
 
+.fa-file-pdf-o {
+    color: #f40e02a6;
+}
+
+.fa-file-pdf-o:hover {
+    color: #f40e02a6;
+    opacity: 0.7;
+}
+
 .fa-linkedin {
     color:#007bb5;
 }
 
 .fa-linkedin:hover {
     color:#007bb5;
-    opacity: 0.5;
+    opacity: 0.7;
 }
 
 .fa-github {
-    color: black;
+    color: rgba(0, 0, 0, 0.76);
 }
 
 .fa-github:hover {
-    color: black;
-    opacity: 0.5;
+    color: rgba(0, 0, 0, 0.76);
+    opacity: 0.7;
 }
 
 nav ul {
