--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,6 +56,11 @@ section {
     float: right;
 }
 
+.card-img-top {
+    border-top:  1px solid rgba(0,0,0,.125);
+    border-bottom:  1px solid rgba(0,0,0,.125);
+}
+
 #intro {
     padding-bottom: 20px;
 }
