--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -162,5 +162,13 @@ footer {
 }
 
 #phoneRow {
-    margin-top: 20px;
+    margin-top: 15px;
+}
+
+p {
+    font-family: BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+#brand-statement {
+    font-size: 17px;
 }
